# isaac-powerpack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  package-lock.json  package.json  pow.sim.toml  pow.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_scope.md  task_scope.md
docs/: contributing.md  index.md
src/: constants.ts  index.ts
src/detection2D/: converter.ts  default.config.json  default.label.json  panel.tsx
src/detection2d/: constants.ts  converter.ts  index.ts  panel.tsx  types.ts
src/detection2d/comps/: BoundingBoxLayer.tsx  Canvas.tsx  ImageLayer.tsx
src/detection2d/hooks/: useDetectionLabel.ts  useRenderImage.ts  useSettingsPanel.ts  useVariables.ts
src/detection2d/ui/: useDrawImage.ts  usePanelState.ts  useRenderImage.ts
src/detection2dArray/: converter.ts  index.ts  label.config.json  types.ts
src/lib/hooks/: useFilterTopics.ts
src/lib/utils/: images.ts  topics.ts
