[project]
name = "isaac-powerpack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "isaacsim[all,extscache]==5.1.0",
    "pow-cli",
]

[project.scripts]
pow = "packages.cli:pow"

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[tool.uv.workspace]
members = [
    "packages/cli",
]

[tool.uv.sources]
pow-cli = { workspace = true, editable = true }